# -Text-to-SQL-Agent-

./: README.md
data-agent/: graph.mmd  main.py  pyproject.toml  面向数据仓库的 Text-to-SQL Agent.md
data-agent/app/: main.py
data-agent/app/agent/: graph.py  llm.py
data-agent/app/agent/nodes/: column_recall.py  extract_keywords.py  filter_metric_info.py  filter_table_info.py  merge_retrieved_info.py  metric_recall.py
data-agent/app/api/routers/: chat_router.py
data-agent/app/clients/: embedding_client.py
data-agent/app/config/: app_config.py
data-agent/app/repositories/mysql/: dw_mysql_repository.py  meta_mysql_repository.py
data-agent/app/repositories/qdrant/: base_repository_qdrant.py
data-agent/app/scripts/: build_meta_knowledge.py
data-agent/app/service/: meta_knowledge_service.py
data-agent/conf/: app_config.yaml
data-agent/date-agent-frontend/src/: App.vue  style.css
